// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component with error matches snapshot 1`] = `
<div
  className="MuiFormControl-root makeStyles-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root makeStyles-label-2 MuiInputLabel-formControl MuiInputLabel-animated Mui-error Mui-error"
    data-shrink={false}
    htmlFor="data_response_country"
  >
    label
  </label>
  <div
    className="MuiInputBase-root Mui-error MuiInputBase-formControl"
    onClick={[Function]}
  >
    <select
      aria-invalid={true}
      className="MuiNativeSelect-root MuiNativeSelect-select MuiInputBase-input WithStyles(ForwardRef(InputBase))-input-6"
      disabled={false}
      id="data_response_country"
      name="name"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      value=""
    >
      <option
        value="value_1"
      >
        name_1
      </option>
    </select>
    <svg
      className="MuiNativeSelect-icon makeStyles-icon-4"
      fill="none"
      height={24}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </div>
  <p
    className="MuiFormHelperText-root makeStyles-errorMessage-3 Mui-error"
  >
    error
  </p>
</div>
`;

exports[`Select component without error matches snapshot 1`] = `
<div
  className="MuiFormControl-root makeStyles-root-1"
>
  <label
    className="MuiFormLabel-root MuiInputLabel-root makeStyles-label-2 MuiInputLabel-formControl MuiInputLabel-animated"
    data-shrink={false}
    htmlFor="data_response_country"
  >
    label
  </label>
  <div
    className="MuiInputBase-root MuiInputBase-formControl"
    onClick={[Function]}
  >
    <select
      aria-invalid={false}
      className="MuiNativeSelect-root MuiNativeSelect-select MuiInputBase-input WithStyles(ForwardRef(InputBase))-input-6"
      disabled={false}
      id="data_response_country"
      name="name"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      value=""
    >
      <option
        value="value_1"
      >
        name_1
      </option>
    </select>
    <svg
      className="MuiNativeSelect-icon makeStyles-icon-4"
      fill="none"
      height={24}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="6 9 12 15 18 9"
      />
    </svg>
  </div>
</div>
`;
